--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
-.container {
-  padding: 0 2rem;
+.container{
+    width: 80%;
+    margin: auto;
 }
-
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -10,22 +10,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
 .title a {
@@ -50,20 +34,6 @@
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
 
 .grid {
   display: flex;
@@ -76,20 +46,25 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
-
+.question,.answer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  border-color: #aaa;
 }
 
 .card h2 {
@@ -113,4 +88,33 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+
+.input,.button{
+    padding: 12px 20px;
+    display: inline;
+    border:.2px solid #ccc;
+    margin:1rem;
+}
+
+.input{
+  width:100px
+}
+.button{
+  background: rgb(255, 123, 0);
+  color:white;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
+}
+.button:hover{
+  background: rgb(43, 26, 0);
+}
+.answerBox{
+    padding:10px;
+    border:.2px solid #ccc;
+    background-color: rgb(248, 248, 248);
+    height: 40px;
+    width: 100px;
 }
